...
                android:layout_marginStart="1dp"
                android:gravity="center"
                android:stretchMode="columnWidth"
                android:nestedScrollingEnabled="true"

                android:numColumns="3"
                android:id="@+id/photograph_grid"

                 />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

...
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back" />

        <Space
            android:layout_width="0dp"
...
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Save" />

        <Space
            android:layout_width="0dp"
...
